compiler/fir/analysis-tests/testData/resolve/unionTypeAlias.kt
typealias Foo = <!UNION_TYPE_PROHIBITED_POSITION!>Int | String<!>
